# gelatoformatter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  rescale.py
exampledata/: SN2020bvc_Spectra_Master.txt  tns_2020bvc_2020-02-05_13-08-02_FTN_FLOYDS-N_Global_SN_Project.ascii
